--- a/index.html
+++ b/index.html
@@ -46,29 +46,54 @@
     </nav>
             <img src="img/company.jpg">
 </header>
-<div class="wrap">
-    <div class="container container-fluid">
-        <ol class="breadcrumb pull-left" style="padding:2.5% 0;margin:0;">
-            <li><a href="">首页</a></li>
-            <li class="active ">职业</li>
-        </ol>
+<div class="wrap" style="background-color: #fafafa;">
+    <div class="wrap">
+        <div class="container container-fluid">
+            <ol class="breadcrumb pull-left" style="padding:2.5% 0;margin:0;">
+                <li><a href="">首页</a></li>
+                <li class="active ">职业</li>
+            </ol>
+        </div>
     </div>
-</div>
-<div class="wrap">
-    <div class="container container"  style="padding:24px 0;border-top:1px solid #d0d6d9;border-bottom:1px solid #edf1f2;">
-        <ul class="anchor-nav ">
-            <li >方向：</li>
-            <li ><a href="">全部</a></li>
-            <li ><a href="">前端开发</a></li>
-            <li ><a href="">后端开发</a></li>
-            <li ><a href="">移动开发</a></li>
-            <li ><a href="">整站开发</a></li>
-            <li ><a href="">运营维护</a></li>
-        </ul>
+    <div class="wrap">
+        <div class="container container-fluid"  style="padding:24px 0;border-top:1px solid #d0d6d9;border-bottom:1px solid #edf1f2;">
+            <ul class="anchor-nav ">
+                <li >方向：</li>
+                <li ><a href="">全部</a></li>
+                <li ><a href="">前端开发</a></li>
+                <li ><a href="">后端开发</a></li>
+                <li ><a href="">移动开发</a></li>
+                <li ><a href="">整站开发</a></li>
+                <li ><a href="">运营维护</a></li>
+            </ul>
+        </div>
     </div>
-</div>
-<div class="container container" style="padding:35px 0;border-bottom:1px solid #d0d6d9;">
-    <h5>前端开发方向</h5>
+    <div class="container container-fluid" style="padding:35px 0;border-bottom:1px solid #d0d6d9;">
+        <h5 class="job-col-border-bottom text-left" style="padding-bottom:33px;">前端开发方向</h5>
+    <section class="container"
+            <div class="col-lg-4 job-col-border text-left" style="padding:0;">
+                <div class="col-lg-12 job-col-border-bottom" style="padding:0;">
+                    <div class="col-lg-5" style="padding:15px 0 0;margin-bottom:18px;text-align: center;"><img src="img/picture_03.jpg"></div>
+                    <div class="col-lg-7" style="text-align: left;padding:15px 0 0;"><h5>Web前端工程师</h5>
+                    <p>Web前端开发工程师，主要职责是利用（X）HTML / CSS / JavaScript / flash 等各种Web技术进行产品的开发。</p></div>
+                </div>
+                <div class="col-lg-6 job-col-padding job-col-border-right job-col-border-bottom p-12px font-color-999">门槛 <p class="font-color-orange" style="display: inline">★</p></div>
+                <div class="col-lg-6 job-col-padding job-col-border-bottom p-12px font-color-999">难易程度 <p class="font-color-orange" style="display: inline">★★</p></div>
+                <div class="col-lg-6 job-col-padding job-col-border-right job-col-border-bottom p-12px font-color-999">成长周期 <p class="font-color-orange" style="display: inline">1-3年</p></div>
+                <div class="col-lg-6 job-col-padding job-col- job-col-border-bottom p-12px font-color-999">稀缺程度 <p class="font-color-orange" style="display: inline">345</p>家公司需要</div>
+                <div class="col-lg-12 job-col-border-bottom" style="padding:0;" >
+                    <div class="col-lg-4 p-12px font-color-999" style="padding:60px 0 0 35px;"> 薪资待遇</div>
+                    <div class="col-lg-8  p-12px" style="padding:0;">
+                        <div class="job-col-padding job-col-border-bottom job-col-border-left">0-1年 5k-10k</div>
+                        <div class="job-col-padding job-col-border-bottom job-col-border-left">1-3年 10k-20k</div>
+                        <div class="job-col-padding job-col-border-left">3年以上 20k-50k</div>
+                    </div>
+                </div>
+                <div class="col-lg-12 job-col-padding job-col-border-bottom" style="font-weight: 600;">有<p class="font-color-orange" style="display: inline">286</p>人正在学</div>
+                <div class="col-lg-12 job-col-padding job-col-border-bottom p-12px font-color-999">提示:在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</div>
+            </div>
+        </div>
+    </div>
 </div>
 <footer style="background-color: #fff;">
 
