--- a/index.html
+++ b/index.html
@@ -69,48 +69,47 @@
         </div>
     </div>
 </div>
-<div class="container container-fluid" style="padding:35px 0;border-bottom:1px solid #d0d6d9;">
-    <h5 class="job-col-border-bottom text-left" style="padding-bottom:33px;">前端开发方向</h5>
-    <div class="row flip-container "  ontouchstart="this.classList.toggle('hover');">
-        <div class="flipper col-lg-4">
-            <div class="front">
-            <div class="col-lg-12 job-col-border text-left" style="padding:0;">
-                <div class="col-lg-12 job-col-border-bottom" style="padding:0;">
-                    <div class="col-lg-5" style="padding:15px 0 0;margin-bottom:18px;text-align: center;"><img src="img/picture_03.jpg"></div>
-                    <div class="col-lg-7" style="text-align: left;padding:15px 0 0;"><h5>Web前端工程师</h5>
-                    <p>Web前端开发工程师，主要职责是利用（X）HTML / CSS / JavaScript / flash 等各种Web技术进行产品的开发。</p></div>
-                </div>
-                <div class="col-lg-6 job-col-padding job-col-border-right job-col-border-bottom p-12px font-color-999">门槛 <p class="font-color-orange" style="display: inline">★</p></div>
-                <div class="col-lg-6 job-col-padding job-col-border-bottom p-12px font-color-999">难易程度 <p class="font-color-orange" style="display: inline">★★</p></div>
-                <div class="col-lg-6 job-col-padding job-col-border-right job-col-border-bottom p-12px font-color-999">成长周期 <p class="font-color-orange" style="display: inline">1-3年</p></div>
-                <div class="col-lg-6 job-col-padding job-col- job-col-border-bottom p-12px font-color-999">稀缺程度 <p class="font-color-orange" style="display: inline">345</p>家公司需要</div>
-                <div class="col-lg-12 job-col-border-bottom" style="padding:0;" >
-                    <div class="col-lg-4 p-12px font-color-999" style="padding:60px 0 0 35px;"> 薪资待遇</div>
-                    <div class="col-lg-8  p-12px" style="padding:0;">
-                        <div class="job-col-padding job-col-border-bottom job-col-border-left">0-1年 5k-10k</div>
-                        <div class="job-col-padding job-col-border-bottom job-col-border-left">1-3年 10k-20k</div>
-                        <div class="job-col-padding job-col-border-left">3年以上 20k-50k</div>
+<div class="wrap" style="background-color: #fafafa;">
+    <div class="container container-fluid" style="padding:35px 0;border-bottom:1px solid #d0d6d9;">
+        <h5 class="job-col-border-bottom text-left" style="padding-bottom:33px;">前端开发方向</h5>
+        <div class=" flip-container col-lg-4 "  ontouchstart="this.classList.toggle('hover');" style="padding:0;background-color: #fafafa;">
+            <div class="flipper ">
+                <div class="front">
+                <div class="col-lg-12 job-col-border text-left" style="padding:0;">
+                    <div class="col-lg-12 job-col-border-bottom" style="padding:0;">
+                        <div class="col-lg-5" style="padding:15px 0 0;margin-bottom:18px;text-align: center;"><img src="img/picture_03.jpg"></div>
+                        <div class="col-lg-7" style="text-align: left;padding:15px 0 0;"><h5>Web前端工程师</h5>
+                        <p>Web前端开发工程师，主要职责是利用（X）HTML / CSS / JavaScript / flash 等各种Web技术进行产品的开发。</p></div>
                     </div>
+                    <div class="col-lg-6 job-col-padding job-col-border-right job-col-border-bottom p-12px font-color-999">门槛 <p class="font-color-orange" style="display: inline">★</p></div>
+                    <div class="col-lg-6 job-col-padding job-col-border-bottom p-12px font-color-999">难易程度 <p class="font-color-orange" style="display: inline">★★</p></div>
+                    <div class="col-lg-6 job-col-padding job-col-border-right job-col-border-bottom p-12px font-color-999">成长周期 <p class="font-color-orange" style="display: inline">1-3年</p></div>
+                    <div class="col-lg-6 job-col-padding job-col- job-col-border-bottom p-12px font-color-999">稀缺程度 <p class="font-color-orange" style="display: inline">345</p>家公司需要</div>
+                    <div class="col-lg-12 job-col-border-bottom" style="padding:0;" >
+                        <div class="col-lg-4 p-12px font-color-999" style="padding:60px 0 0 35px;"> 薪资待遇</div>
+                        <div class="col-lg-8  p-12px" style="padding:0;">
+                            <div class="job-col-padding job-col-border-bottom job-col-border-left">0-1年 5k-10k</div>
+                            <div class="job-col-padding job-col-border-bottom job-col-border-left">1-3年 10k-20k</div>
+                            <div class="job-col-padding job-col-border-left">3年以上 20k-50k</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 job-col-padding job-col-border-bottom" style="font-weight: 600;">有<p class="font-color-orange" style="display: inline">286</p>人正在学</div>
+                    <div class="col-lg-12 job-col-padding job-col-border-bottom p-12px font-color-999">提示:在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</div>
                 </div>
-                <div class="col-lg-12 job-col-padding job-col-border-bottom" style="font-weight: 600;">有<p class="font-color-orange" style="display: inline">286</p>人正在学</div>
-                <div class="col-lg-12 job-col-padding job-col-border-bottom p-12px font-color-999">提示:在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</div>
-                <div style="clear:both;"></div>
-            </div>
-            <div style="clear:both;"></div>
-            </div>
-            <div class="back"><p>iOS工程师</p>
-                <p>iOS是由苹果公司开发的移动操作统，iOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，因此同样属
-                    于类Unix的商业操作系统。国内iOS开
-                    发起步相对较晚，人才培养机制更是远
-                    远跟不上市场发展速度。有限的iOS开
-                    发人才成了国内企业必争的资源。国内  iOS开发起步相对较晚，人才培养机制
-                    更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源。
-                </p>
+                </div>
+                <div class="back"><p>iOS工程师</p>
+                    <p>iOS是由苹果公司开发的移动操作统，iOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，因此同样属
+                        于类Unix的商业操作系统。国内iOS开
+                        发起步相对较晚，人才培养机制更是远
+                        远跟不上市场发展速度。有限的iOS开
+                        发人才成了国内企业必争的资源。国内  iOS开发起步相对较晚，人才培养机制
+                        更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源。
+                    </p>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
 <footer style="background-color: #fff;">
 
     <div class=" container-fluid" style="background-color: #26a26f;">
